<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/myFirstNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.020" />

    <EditText
        android:id="@+id/myFirstNumber"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="82dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/int1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/mySecondNumber"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/int2"
        app:layout_constraintStart_toStartOf="@+id/myFirstNumber"
        app:layout_constraintTop_toBottomOf="@+id/myFirstNumber" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/mySecondNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/subtractButton"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <Button
        android:id="@+id/subtractButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtract"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/mySecondNumber"
        app:layout_constraintStart_toEndOf="@+id/addButton"
        app:layout_constraintEnd_toStartOf="@+id/multiplyButton" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/mySecondNumber"
        app:layout_constraintStart_toEndOf="@+id/subtractButton"
        app:layout_constraintEnd_toStartOf="@+id/divideButton" />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/mySecondNumber"
        app:layout_constraintStart_toEndOf="@+id/multiplyButton"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>